# operatSystem

./: CMakeLists.txt  Multiplefork.c  a  a.c  a.out  ctu.c  forkUsing.c  getPid  getPidUsing.c  lab0.c  pipe.c  pipeUsing.c  printBytes.c  printbytes  studyMalloc.c  tokenkey  waitUsing  waitUsing.c
Assignment_1_120040077/source/bonus/: myfork.c
Assignment_1_120040077/source/program1/: program1.c
Assignment_1_120040077/source/program2/: program2.c
Assignment_2_120040077/ass2report/: Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
Assignment_2_120040077/source/: hw2.cpp
Assignment_3_120040077/: main1.cu  makefile  virtual_memory.cu  vm
Assignment_3_120040077/bonus/: bonus_main.cu  makefile  virtual_memory.cu
Assignment_3_120040077/report/: report.tex
Assignment_4_120040077/: file_system.cu  main.cu  user_program.cu
Assignment_4_120040077/bonus/: file_system.cu  makefile
Assignment_5_120040077/: main.c  test.c
Assignment_5_120040077/bonus/: main.c  test.c
Tutorial_1_Sample_Code/: -Wall  ParentAndChild_1  ParentAndChild_1.c  ParentAndChild_2.c  ProcessTermination_1.c  ProcessTermination_2  ProcessTermination_2.c  Signal  Signal.c  Signal_2  a.out  child1  child2  execve  execve.c  ter1  test
Tutorial_2_SourceCode/KernalThread/: KT.c
Tutorial_2_SourceCode/LoadModule/: KM.c
ass1/source/program1/: program1.c
ass1/source/program2/: program2.c
ass2report/: Report.aux  Report.fdb_latexmk  Report.fls  Report.tex
